// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Upload Component > props.draggable: theme=image & draggable=true, fail file render fine 1`] = `
<div
  class="t-upload"
>
  <input
    accept=""
    hidden=""
    type="file"
  />
  <!---->
  <div
    class="t-upload__dragger t-upload__dragger-error"
  >
    <div
      class="t-upload__dragger-progress"
    >
      <div
        class="t-upload__dragger-img-wrap"
      >
        
        <div
          class="t-image__wrapper t-image__wrapper--shape-square"
          fallback=""
          referrerpolicy="strict-origin-when-cross-origin"
        >
          <!---->
          <!---->
          <!---->
          <img
            alt=""
            class="t-image t-image--fit-fill t-image--position-center"
            referrerpolicy="strict-origin-when-cross-origin"
            src="https://image4.png"
          />
          <div
            class="t-image__loading"
          >
            <div
              class="t-space t-space-align-center t-space-vertical"
              style="gap: 8px;"
            >
              
              
              <div
                class="t-space-item"
              >
                <svg
                  class="t-icon t-icon-image"
                  fill="none"
                  height="1em"
                  style="font-size: 24px;"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <path
                    d="M2 2H22V22H2V2ZM4 20H17.5858L9 11.4142L4 16.4142V20ZM20 19.5858V4H4V13.5858L9 8.58579L20 19.5858ZM15.5469 7C14.9946 7 14.5469 7.44772 14.5469 8C14.5469 8.55228 14.9946 9 15.5469 9C16.0992 9 16.5469 8.55228 16.5469 8C16.5469 7.44772 16.0992 7 15.5469 7ZM12.5469 8C12.5469 6.34315 13.89 5 15.5469 5C17.2037 5 18.5469 6.34315 18.5469 8C18.5469 9.65685 17.2037 11 15.5469 11C13.89 11 12.5469 9.65685 12.5469 8Z"
                    fill="currentColor"
                  />
                </svg>
              </div>
              <!---->
              
              
            </div>
          </div>
          <!---->
          <!---->
        </div>
        <!--teleport start-->
        <transition-stub
          appear="false"
          css="true"
          persisted="false"
        >
          <!---->
        </transition-stub>
        <!--teleport end-->
        
      </div>
      <div
        class="t-upload__dragger-progress-info"
      >
        
        <div
          class="t-upload__dragger-text"
        >
          <span
            class="t-upload__single-name"
          >
            image4.png
          </span>
          <!---->
          <!---->
          <svg
            class="t-icon t-icon-error-circle-filled"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M12 1C18.0751 1 23 5.92487 23 12C23 18.0751 18.0751 23 12 23C5.92487 23 1 18.0751 1 12C1 5.92487 5.92487 1 12 1ZM11.0001 14H13.0001V6.49998H11.0001V14ZM13.004 15.5H11.0001V17.5039H13.004V15.5Z"
              fill="currentColor"
            />
          </svg>
        </div>
        <small
          class="t-size-s"
        >
          文件大小
          ：
          
        </small>
        <small
          class="t-size-s"
        >
          上传日期
          ：
          -
        </small>
        
        <div
          class="t-upload__dragger-btns"
        >
          <!---->
          <!---->
        </div>
        <div
          class="t-upload__dragger-btns"
        >
          <button
            class="t-button t-button--variant-text t-button--theme-primary t-button--shape-rectangle t-upload__dragger-progress-cancel"
            href=""
            tabindex="0"
            type="button"
          >
            <span
              class="t-button__text"
            >
              
              重新选择
              
            </span>
          </button>
          <button
            class="t-button t-button--variant-text t-button--theme-danger t-button--shape-rectangle t-upload__dragger-delete-btn"
            href=""
            tabindex="0"
            type="button"
          >
            <span
              class="t-button__text"
            >
              
              删除
              
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
  <!---->
  <!---->
  <!---->
  <!---->
  
</div>
`;

exports[`Upload Component > props.draggable: theme=image & draggable=true, progress file render fine 1`] = `
<div
  class="t-upload"
>
  <input
    accept=""
    hidden=""
    type="file"
  />
  <!---->
  <div
    class="t-upload__dragger"
  >
    <div
      class="t-upload__dragger-progress"
    >
      <div
        class="t-upload__dragger-img-wrap"
      >
        
        <div
          class="t-image__wrapper t-image__wrapper--shape-square"
          fallback=""
          referrerpolicy="strict-origin-when-cross-origin"
        >
          <!---->
          <!---->
          <!---->
          <img
            alt=""
            class="t-image t-image--fit-fill t-image--position-center"
            referrerpolicy="strict-origin-when-cross-origin"
            src="https://image2.png"
          />
          <div
            class="t-image__loading"
          >
            <div
              class="t-space t-space-align-center t-space-vertical"
              style="gap: 8px;"
            >
              
              
              <div
                class="t-space-item"
              >
                <svg
                  class="t-icon t-icon-image"
                  fill="none"
                  height="1em"
                  style="font-size: 24px;"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <path
                    d="M2 2H22V22H2V2ZM4 20H17.5858L9 11.4142L4 16.4142V20ZM20 19.5858V4H4V13.5858L9 8.58579L20 19.5858ZM15.5469 7C14.9946 7 14.5469 7.44772 14.5469 8C14.5469 8.55228 14.9946 9 15.5469 9C16.0992 9 16.5469 8.55228 16.5469 8C16.5469 7.44772 16.0992 7 15.5469 7ZM12.5469 8C12.5469 6.34315 13.89 5 15.5469 5C17.2037 5 18.5469 6.34315 18.5469 8C18.5469 9.65685 17.2037 11 15.5469 11C13.89 11 12.5469 9.65685 12.5469 8Z"
                    fill="currentColor"
                  />
                </svg>
              </div>
              <!---->
              
              
            </div>
          </div>
          <!---->
          <!---->
        </div>
        <!--teleport start-->
        <transition-stub
          appear="false"
          css="true"
          persisted="false"
        >
          <!---->
        </transition-stub>
        <!--teleport end-->
        
      </div>
      <div
        class="t-upload__dragger-progress-info"
      >
        
        <div
          class="t-upload__dragger-text"
        >
          <span
            class="t-upload__single-name"
          >
            image2.png
          </span>
          <div
            class="t-upload__single-progress"
          >
            <div
              class="t-loading--center t-size-m t-loading"
            >
              <svg
                class="t-loading__gradient t-icon-loading"
                height="1em"
                size="medium"
                version="1.1"
                viewBox="0 0 12 12"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <foreignobject
                  height="12"
                  width="12"
                  x="0"
                  y="0"
                >
                  <div
                    class="t-loading__gradient-conic"
                  />
                </foreignobject>
              </svg>
              <!---->
            </div>
            <span
              class="t-upload__single-percent"
            >
              80
              %
            </span>
          </div>
          <!---->
          <!---->
        </div>
        <small
          class="t-size-s"
        >
          文件大小
          ：
          
        </small>
        <small
          class="t-size-s"
        >
          上传日期
          ：
          -
        </small>
        
        <div
          class="t-upload__dragger-btns"
        >
          <button
            class="t-button t-button--variant-text t-button--theme-primary t-button--shape-rectangle t-upload__dragger-progress-cancel"
            href=""
            tabindex="0"
            type="button"
          >
            <span
              class="t-button__text"
            >
              
              取消上传
              
            </span>
          </button>
          <!---->
        </div>
        <!---->
      </div>
    </div>
  </div>
  <!---->
  <!---->
  <!---->
  <!---->
  
</div>
`;

exports[`Upload Component > props.draggable: theme=image & draggable=true, success file render fine 1`] = `
<div
  class="t-upload"
>
  <input
    accept=""
    hidden=""
    type="file"
  />
  <!---->
  <div
    class="t-upload__dragger"
  >
    <div
      class="t-upload__dragger-progress"
    >
      <div
        class="t-upload__dragger-img-wrap"
      >
        
        <div
          class="t-image__wrapper t-image__wrapper--shape-square"
          fallback=""
          referrerpolicy="strict-origin-when-cross-origin"
        >
          <!---->
          <!---->
          <!---->
          <img
            alt=""
            class="t-image t-image--fit-fill t-image--position-center"
            referrerpolicy="strict-origin-when-cross-origin"
            src="https://tdesign.gtimg.com/demo/demo-image-1.png"
          />
          <div
            class="t-image__loading"
          >
            <div
              class="t-space t-space-align-center t-space-vertical"
              style="gap: 8px;"
            >
              
              
              <div
                class="t-space-item"
              >
                <svg
                  class="t-icon t-icon-image"
                  fill="none"
                  height="1em"
                  style="font-size: 24px;"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <path
                    d="M2 2H22V22H2V2ZM4 20H17.5858L9 11.4142L4 16.4142V20ZM20 19.5858V4H4V13.5858L9 8.58579L20 19.5858ZM15.5469 7C14.9946 7 14.5469 7.44772 14.5469 8C14.5469 8.55228 14.9946 9 15.5469 9C16.0992 9 16.5469 8.55228 16.5469 8C16.5469 7.44772 16.0992 7 15.5469 7ZM12.5469 8C12.5469 6.34315 13.89 5 15.5469 5C17.2037 5 18.5469 6.34315 18.5469 8C18.5469 9.65685 17.2037 11 15.5469 11C13.89 11 12.5469 9.65685 12.5469 8Z"
                    fill="currentColor"
                  />
                </svg>
              </div>
              <!---->
              
              
            </div>
          </div>
          <!---->
          <!---->
        </div>
        <!--teleport start-->
        <transition-stub
          appear="false"
          css="true"
          persisted="false"
        >
          <!---->
        </transition-stub>
        <!--teleport end-->
        
      </div>
      <div
        class="t-upload__dragger-progress-info"
      >
        
        <div
          class="t-upload__dragger-text"
        >
          <span
            class="t-upload__single-name"
          >
            image1.png
          </span>
          <!---->
          <svg
            class="t-icon t-icon-check-circle-filled"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M12 23C18.0751 23 23 18.0751 23 12C23 5.92487 18.0751 1 12 1C5.92487 1 1 5.92487 1 12C1 18.0751 5.92487 23 12 23ZM7.49985 10.5858L10.4999 13.5858L16.4999 7.58578L17.9141 8.99999L10.4999 16.4142L6.08564 12L7.49985 10.5858Z"
              fill="currentColor"
            />
          </svg>
          <!---->
        </div>
        <small
          class="t-size-s"
        >
          文件大小
          ：
          
        </small>
        <small
          class="t-size-s"
        >
          上传日期
          ：
          -
        </small>
        
        <div
          class="t-upload__dragger-btns"
        >
          <!---->
          <!---->
        </div>
        <div
          class="t-upload__dragger-btns"
        >
          <button
            class="t-button t-button--variant-text t-button--theme-primary t-button--shape-rectangle t-upload__dragger-progress-cancel"
            href=""
            tabindex="0"
            type="button"
          >
            <span
              class="t-button__text"
            >
              
              重新选择
              
            </span>
          </button>
          <button
            class="t-button t-button--variant-text t-button--theme-danger t-button--shape-rectangle t-upload__dragger-delete-btn"
            href=""
            tabindex="0"
            type="button"
          >
            <span
              class="t-button__text"
            >
              
              删除
              
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
  <!---->
  <!---->
  <!---->
  <!---->
  
</div>
`;

exports[`Upload Component > props.draggable: theme=image & draggable=true, success file render fine with file.response.url 1`] = `
<div
  class="t-upload"
>
  <input
    accept=""
    hidden=""
    type="file"
  />
  <!---->
  <div
    class="t-upload__dragger"
  >
    <div
      class="t-upload__dragger-progress"
    >
      <div
        class="t-upload__dragger-img-wrap"
      >
        
        <div
          class="t-image__wrapper t-image__wrapper--shape-square"
          fallback=""
          referrerpolicy="strict-origin-when-cross-origin"
        >
          <!---->
          <!---->
          <!---->
          <img
            alt=""
            class="t-image t-image--fit-fill t-image--position-center"
            referrerpolicy="strict-origin-when-cross-origin"
            src="https://tdesign.gtimg.com/demo/demo-image-1.png"
          />
          <div
            class="t-image__loading"
          >
            <div
              class="t-space t-space-align-center t-space-vertical"
              style="gap: 8px;"
            >
              
              
              <div
                class="t-space-item"
              >
                <svg
                  class="t-icon t-icon-image"
                  fill="none"
                  height="1em"
                  style="font-size: 24px;"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <path
                    d="M2 2H22V22H2V2ZM4 20H17.5858L9 11.4142L4 16.4142V20ZM20 19.5858V4H4V13.5858L9 8.58579L20 19.5858ZM15.5469 7C14.9946 7 14.5469 7.44772 14.5469 8C14.5469 8.55228 14.9946 9 15.5469 9C16.0992 9 16.5469 8.55228 16.5469 8C16.5469 7.44772 16.0992 7 15.5469 7ZM12.5469 8C12.5469 6.34315 13.89 5 15.5469 5C17.2037 5 18.5469 6.34315 18.5469 8C18.5469 9.65685 17.2037 11 15.5469 11C13.89 11 12.5469 9.65685 12.5469 8Z"
                    fill="currentColor"
                  />
                </svg>
              </div>
              <!---->
              
              
            </div>
          </div>
          <!---->
          <!---->
        </div>
        <!--teleport start-->
        <transition-stub
          appear="false"
          css="true"
          persisted="false"
        >
          <!---->
        </transition-stub>
        <!--teleport end-->
        
      </div>
      <div
        class="t-upload__dragger-progress-info"
      >
        
        <div
          class="t-upload__dragger-text"
        >
          <span
            class="t-upload__single-name"
          >
            image1.png
          </span>
          <!---->
          <svg
            class="t-icon t-icon-check-circle-filled"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M12 23C18.0751 23 23 18.0751 23 12C23 5.92487 18.0751 1 12 1C5.92487 1 1 5.92487 1 12C1 18.0751 5.92487 23 12 23ZM7.49985 10.5858L10.4999 13.5858L16.4999 7.58578L17.9141 8.99999L10.4999 16.4142L6.08564 12L7.49985 10.5858Z"
              fill="currentColor"
            />
          </svg>
          <!---->
        </div>
        <small
          class="t-size-s"
        >
          文件大小
          ：
          
        </small>
        <small
          class="t-size-s"
        >
          上传日期
          ：
          -
        </small>
        
        <div
          class="t-upload__dragger-btns"
        >
          <!---->
          <!---->
        </div>
        <div
          class="t-upload__dragger-btns"
        >
          <button
            class="t-button t-button--variant-text t-button--theme-primary t-button--shape-rectangle t-upload__dragger-progress-cancel"
            href=""
            tabindex="0"
            type="button"
          >
            <span
              class="t-button__text"
            >
              
              重新选择
              
            </span>
          </button>
          <button
            class="t-button t-button--variant-text t-button--theme-danger t-button--shape-rectangle t-upload__dragger-delete-btn"
            href=""
            tabindex="0"
            type="button"
          >
            <span
              class="t-button__text"
            >
              
              删除
              
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
  <!---->
  <!---->
  <!---->
  <!---->
  
</div>
`;

exports[`Upload Component > props.draggable: theme=image & draggable=true, waiting file render fine 1`] = `
<div
  class="t-upload"
>
  <input
    accept=""
    hidden=""
    type="file"
  />
  <!---->
  <div
    class="t-upload__dragger"
  >
    <div
      class="t-upload__dragger-progress"
    >
      <div
        class="t-upload__dragger-img-wrap"
      >
        
        <div
          class="t-image__wrapper t-image__wrapper--shape-square"
          fallback=""
          referrerpolicy="strict-origin-when-cross-origin"
        >
          <!---->
          <!---->
          <!---->
          <img
            alt=""
            class="t-image t-image--fit-fill t-image--position-center"
            referrerpolicy="strict-origin-when-cross-origin"
            src="https://image3.png"
          />
          <div
            class="t-image__loading"
          >
            <div
              class="t-space t-space-align-center t-space-vertical"
              style="gap: 8px;"
            >
              
              
              <div
                class="t-space-item"
              >
                <svg
                  class="t-icon t-icon-image"
                  fill="none"
                  height="1em"
                  style="font-size: 24px;"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <path
                    d="M2 2H22V22H2V2ZM4 20H17.5858L9 11.4142L4 16.4142V20ZM20 19.5858V4H4V13.5858L9 8.58579L20 19.5858ZM15.5469 7C14.9946 7 14.5469 7.44772 14.5469 8C14.5469 8.55228 14.9946 9 15.5469 9C16.0992 9 16.5469 8.55228 16.5469 8C16.5469 7.44772 16.0992 7 15.5469 7ZM12.5469 8C12.5469 6.34315 13.89 5 15.5469 5C17.2037 5 18.5469 6.34315 18.5469 8C18.5469 9.65685 17.2037 11 15.5469 11C13.89 11 12.5469 9.65685 12.5469 8Z"
                    fill="currentColor"
                  />
                </svg>
              </div>
              <!---->
              
              
            </div>
          </div>
          <!---->
          <!---->
        </div>
        <!--teleport start-->
        <transition-stub
          appear="false"
          css="true"
          persisted="false"
        >
          <!---->
        </transition-stub>
        <!--teleport end-->
        
      </div>
      <div
        class="t-upload__dragger-progress-info"
      >
        
        <div
          class="t-upload__dragger-text"
        >
          <span
            class="t-upload__single-name"
          >
            image3.png
          </span>
          <!---->
          <!---->
          <!---->
        </div>
        <small
          class="t-size-s"
        >
          文件大小
          ：
          
        </small>
        <small
          class="t-size-s"
        >
          上传日期
          ：
          -
        </small>
        
        <div
          class="t-upload__dragger-btns"
        >
          <button
            class="t-button t-button--variant-text t-button--theme-primary t-button--shape-rectangle t-upload__dragger-progress-cancel"
            href=""
            tabindex="0"
            type="button"
          >
            <span
              class="t-button__text"
            >
              
              取消上传
              
            </span>
          </button>
          <!---->
        </div>
        <!---->
      </div>
    </div>
  </div>
  <!---->
  <!---->
  <!---->
  <!---->
  
</div>
`;

exports[`Upload Component > props.theme: theme=file-flow works fine 1`] = `
<div
  class="t-upload"
>
  <input
    accept=""
    hidden=""
    type="file"
  />
  <!---->
  <!---->
  <!---->
  <div
    class="t-upload__flow t-upload__flow-file-flow"
  >
    <div
      class="t-upload__flow-op"
    >
      
      <div
        class="t-upload__trigger"
      >
        <button
          class="t-button t-button--variant-outline t-button--theme-default t-button--shape-rectangle"
          href=""
          tabindex="0"
          type="button"
        >
          
          <svg
            class="t-icon t-icon-upload"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M12 2.58569L17.9142 8.49991L16.5 9.91412L13 6.41412L13 15.9999H11L11 6.41412L7.5 9.91412L6.08579 8.49991L12 2.58569ZM4.5 13.9999V18.9999H19.5V13.9999H21.5V20.9999H2.5V13.9999H4.5Z"
              fill="currentColor"
            />
          </svg>
          <span
            class="t-button__text"
          >
            
            重新选择
            
          </span>
          
        </button>
      </div>
      
      
    </div>
    <!---->
    <table
      class="t-upload__flow-table"
    >
      <thead>
        <tr>
          <th>
            文件名
          </th>
          <th
            style="min-width: 120px;"
          >
            文件大小
          </th>
          <th
            style="min-width: 120px;"
          >
            状态
          </th>
          <th>
            操作
          </th>
        </tr>
      </thead>
      <tbody>
        <!---->
        
        <tr>
          <td
            class="t-upload__file-name"
          >
            file1.txt
          </td>
          <td>
            
          </td>
          <td>
            <div
              class="t-upload__flow-status"
            >
              <svg
                class="t-icon t-icon-check-circle-filled"
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
              >
                <path
                  d="M12 23C18.0751 23 23 18.0751 23 12C23 5.92487 18.0751 1 12 1C5.92487 1 1 5.92487 1 12C1 18.0751 5.92487 23 12 23ZM7.49985 10.5858L10.4999 13.5858L16.4999 7.58578L17.9141 8.99999L10.4999 16.4142L6.08564 12L7.49985 10.5858Z"
                  fill="currentColor"
                />
              </svg>
              <span
                class="t-upload__file-flow-success"
              >
                上传成功
                
              </span>
            </div>
          </td>
          <td>
            <button
              class="t-button t-button--variant-text t-button--theme-primary t-button--shape-rectangle t-upload__delete"
              href=""
              tabindex="0"
              type="button"
            >
              <span
                class="t-button__text"
              >
                删除
              </span>
            </button>
          </td>
        </tr>
        <tr>
          <td
            class="t-upload__file-name"
          >
            file2.txt
          </td>
          <td>
            
          </td>
          <td>
            <div
              class="t-upload__flow-status"
            >
              <svg
                class="t-icon t-icon-time-filled"
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
              >
                <path
                  d="M12 23C5.92487 23 1 18.0751 1 12C1 5.92487 5.92487 1 12 1C18.0751 1 23 5.92487 23 12C23 18.0751 18.0751 23 12 23ZM12.9999 5.49999H10.9999L10.9998 12.4142L14.9999 16.4142L16.4141 15L12.9999 11.5858V5.49999Z"
                  fill="currentColor"
                />
              </svg>
              <span
                class="t-upload__file-flow-waiting"
              >
                待上传
                
              </span>
            </div>
          </td>
          <td>
            <button
              class="t-button t-button--variant-text t-button--theme-primary t-button--shape-rectangle t-upload__delete"
              href=""
              tabindex="0"
              type="button"
            >
              <span
                class="t-button__text"
              >
                删除
              </span>
            </button>
          </td>
        </tr>
        <tr>
          <td
            class="t-upload__file-name"
          >
            file3.txt
          </td>
          <td>
            
          </td>
          <td>
            <div
              class="t-upload__flow-status"
            >
              <svg
                class="t-icon t-icon-error-circle-filled"
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
              >
                <path
                  d="M12 1C18.0751 1 23 5.92487 23 12C23 18.0751 18.0751 23 12 23C5.92487 23 1 18.0751 1 12C1 5.92487 5.92487 1 12 1ZM11.0001 14H13.0001V6.49998H11.0001V14ZM13.004 15.5H11.0001V17.5039H13.004V15.5Z"
                  fill="currentColor"
                />
              </svg>
              <span
                class="t-upload__file-flow-fail"
              >
                上传失败
                
              </span>
            </div>
          </td>
          <td>
            <button
              class="t-button t-button--variant-text t-button--theme-primary t-button--shape-rectangle t-upload__delete"
              href=""
              tabindex="0"
              type="button"
            >
              <span
                class="t-button__text"
              >
                删除
              </span>
            </button>
          </td>
        </tr>
        <tr>
          <td
            class="t-upload__file-name"
          >
            file4.txt
          </td>
          <td>
            
          </td>
          <td>
            <div
              class="t-upload__flow-status"
            >
              <div
                class="t-loading--center t-size-m t-loading"
              >
                <svg
                  class="t-loading__gradient t-icon-loading"
                  height="1em"
                  size="medium"
                  version="1.1"
                  viewBox="0 0 12 12"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <foreignobject
                    height="12"
                    width="12"
                    x="0"
                    y="0"
                  >
                    <div
                      class="t-loading__gradient-conic"
                    />
                  </foreignobject>
                </svg>
                <!---->
              </div>
              <span
                class="t-upload__file-flow-progress"
              >
                上传中
                 90%
              </span>
            </div>
          </td>
          <td>
            <button
              class="t-button t-button--variant-text t-button--theme-primary t-button--shape-rectangle t-upload__delete"
              href=""
              tabindex="0"
              type="button"
            >
              <span
                class="t-button__text"
              >
                删除
              </span>
            </button>
          </td>
        </tr>
        
      </tbody>
    </table>
    <!---->
    
    <!---->
    <!--teleport start-->
    <transition-stub
      appear="false"
      css="true"
      persisted="false"
    >
      <!---->
    </transition-stub>
    <!--teleport end-->
    
  </div>
  <!---->
  <!---->
  
</div>
`;

exports[`Upload Component > props.theme: theme=image-flow works fine 1`] = `
<div
  class="t-upload"
>
  <input
    accept=""
    hidden=""
    type="file"
  />
  <!---->
  <!---->
  <!---->
  <div
    class="t-upload__flow t-upload__flow-image-flow"
  >
    <div
      class="t-upload__flow-op"
    >
      
      <div
        class="t-upload__trigger"
      >
        <button
          class="t-button t-button--variant-outline t-button--theme-default t-button--shape-rectangle"
          href=""
          tabindex="0"
          type="button"
        >
          
          <svg
            class="t-icon t-icon-upload"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M12 2.58569L17.9142 8.49991L16.5 9.91412L13 6.41412L13 15.9999H11L11 6.41412L7.5 9.91412L6.08579 8.49991L12 2.58569ZM4.5 13.9999V18.9999H19.5V13.9999H21.5V20.9999H2.5V13.9999H4.5Z"
              fill="currentColor"
            />
          </svg>
          <span
            class="t-button__text"
          >
            
            重新选择
            
          </span>
          
        </button>
      </div>
      
      
    </div>
    <div
      class="t-upload__flow-card-area"
    >
      <ul
        class="t-upload__card clearfix"
      >
        
        <li
          class="t-upload__card-item"
        >
          <div
            class="t-upload__card-content t-is-bordered"
          >
            <!---->
            <div
              class="t-image__wrapper t-image__wrapper--shape-square t-upload__card-image"
              fallback=""
              referrerpolicy="strict-origin-when-cross-origin"
            >
              <!---->
              <!---->
              <!---->
              <img
                alt=""
                class="t-image t-image--fit-contain t-image--position-center"
                referrerpolicy="strict-origin-when-cross-origin"
                src=""
              />
              <div
                class="t-image__loading"
              >
                <div
                  class="t-space t-space-align-center t-space-vertical"
                  style="gap: 8px;"
                >
                  
                  
                  <div
                    class="t-space-item"
                  >
                    <svg
                      class="t-icon t-icon-image"
                      fill="none"
                      height="1em"
                      style="font-size: 24px;"
                      viewBox="0 0 24 24"
                      width="1em"
                    >
                      <path
                        d="M2 2H22V22H2V2ZM4 20H17.5858L9 11.4142L4 16.4142V20ZM20 19.5858V4H4V13.5858L9 8.58579L20 19.5858ZM15.5469 7C14.9946 7 14.5469 7.44772 14.5469 8C14.5469 8.55228 14.9946 9 15.5469 9C16.0992 9 16.5469 8.55228 16.5469 8C16.5469 7.44772 16.0992 7 15.5469 7ZM12.5469 8C12.5469 6.34315 13.89 5 15.5469 5C17.2037 5 18.5469 6.34315 18.5469 8C18.5469 9.65685 17.2037 11 15.5469 11C13.89 11 12.5469 9.65685 12.5469 8Z"
                        fill="currentColor"
                      />
                    </svg>
                  </div>
                  <!---->
                  
                  
                </div>
              </div>
              <!---->
              <!---->
            </div>
            <div
              class="t-upload__card-mask"
            >
              <!---->
              <span
                class="t-upload__card-mask-item t-upload__delete"
              >
                <svg
                  class="t-icon t-icon-delete"
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <path
                    d="M7.5 1H16.5V4H22V6H19.971L19.471 23H4.52898L4.02898 6H2V4H7.5V1ZM9.5 4H14.5V3H9.5V4ZM6.02984 6L6.47102 21H17.529L17.9702 6H6.02984ZM13 8V19H11V8H13Z"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </div>
          </div>
          <p
            class="t-upload__card-name t-upload__flow-status"
          >
            <svg
              class="t-icon t-icon-check-circle-filled"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M12 23C18.0751 23 23 18.0751 23 12C23 5.92487 18.0751 1 12 1C5.92487 1 1 5.92487 1 12C1 18.0751 5.92487 23 12 23ZM7.49985 10.5858L10.4999 13.5858L16.4999 7.58578L17.9141 8.99999L10.4999 16.4142L6.08564 12L7.49985 10.5858Z"
                fill="currentColor"
              />
            </svg>
            img.txt
          </p>
        </li>
        <li
          class="t-upload__card-item"
        >
          <div
            class="t-upload__card-content t-is-bordered"
          >
            <!---->
            <div
              class="t-image__wrapper t-image__wrapper--shape-square t-upload__card-image"
              fallback=""
              referrerpolicy="strict-origin-when-cross-origin"
            >
              <!---->
              <!---->
              <!---->
              <img
                alt=""
                class="t-image t-image--fit-contain t-image--position-center"
                referrerpolicy="strict-origin-when-cross-origin"
                src="https://img1.txt"
              />
              <div
                class="t-image__loading"
              >
                <div
                  class="t-space t-space-align-center t-space-vertical"
                  style="gap: 8px;"
                >
                  
                  
                  <div
                    class="t-space-item"
                  >
                    <svg
                      class="t-icon t-icon-image"
                      fill="none"
                      height="1em"
                      style="font-size: 24px;"
                      viewBox="0 0 24 24"
                      width="1em"
                    >
                      <path
                        d="M2 2H22V22H2V2ZM4 20H17.5858L9 11.4142L4 16.4142V20ZM20 19.5858V4H4V13.5858L9 8.58579L20 19.5858ZM15.5469 7C14.9946 7 14.5469 7.44772 14.5469 8C14.5469 8.55228 14.9946 9 15.5469 9C16.0992 9 16.5469 8.55228 16.5469 8C16.5469 7.44772 16.0992 7 15.5469 7ZM12.5469 8C12.5469 6.34315 13.89 5 15.5469 5C17.2037 5 18.5469 6.34315 18.5469 8C18.5469 9.65685 17.2037 11 15.5469 11C13.89 11 12.5469 9.65685 12.5469 8Z"
                        fill="currentColor"
                      />
                    </svg>
                  </div>
                  <!---->
                  
                  
                </div>
              </div>
              <!---->
              <!---->
            </div>
            <div
              class="t-upload__card-mask"
            >
              <span
                class="t-upload__card-mask-item"
              >
                <svg
                  class="t-icon t-icon-browse"
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <g
                    clipPath="url(#clip0_8726_7319)"
                  >
                    <path
                      d="M2.09675 12C3.53842 16.0792 7.42915 19 11.9996 19C16.57 19 20.4607 16.0792 21.9024 12C20.4607 7.92079 16.57 5 11.9996 5C7.42915 5 3.53842 7.92079 2.09675 12ZM0.0892162 11.696C1.69842 6.65364 6.42102 3 11.9996 3C17.5781 3 22.3007 6.65364 23.9099 11.696L24.007 12L23.9099 12.304C22.3007 17.3464 17.5781 21 11.9996 21C6.42102 21 1.69842 17.3464 0.0892162 12.304L-0.0078125 12L0.0892162 11.696ZM11.9999 9C10.343 9 8.99989 10.3431 8.99989 12C8.99989 13.6569 10.343 15 11.9999 15C13.6567 15 14.9999 13.6569 14.9999 12C14.9999 10.3431 13.6567 9 11.9999 9ZM6.99989 12C6.99989 9.23858 9.23846 7 11.9999 7C14.7613 7 16.9999 9.23858 16.9999 12C16.9999 14.7614 14.7613 17 11.9999 17C9.23846 17 6.99989 14.7614 6.99989 12Z"
                      fill="currentColor"
                    />
                  </g>
                </svg>
                <span
                  class="t-upload__card-mask-item-divider"
                />
              </span>
              <span
                class="t-upload__card-mask-item t-upload__delete"
              >
                <svg
                  class="t-icon t-icon-delete"
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <path
                    d="M7.5 1H16.5V4H22V6H19.971L19.471 23H4.52898L4.02898 6H2V4H7.5V1ZM9.5 4H14.5V3H9.5V4ZM6.02984 6L6.47102 21H17.529L17.9702 6H6.02984ZM13 8V19H11V8H13Z"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </div>
          </div>
          <p
            class="t-upload__card-name t-upload__flow-status"
          >
            <svg
              class="t-icon t-icon-check-circle-filled"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M12 23C18.0751 23 23 18.0751 23 12C23 5.92487 18.0751 1 12 1C5.92487 1 1 5.92487 1 12C1 18.0751 5.92487 23 12 23ZM7.49985 10.5858L10.4999 13.5858L16.4999 7.58578L17.9141 8.99999L10.4999 16.4142L6.08564 12L7.49985 10.5858Z"
                fill="currentColor"
              />
            </svg>
            img1.txt
          </p>
        </li>
        <li
          class="t-upload__card-item"
        >
          <div
            class="t-upload__card-content"
          >
            <!---->
            <div
              class="t-image__wrapper t-image__wrapper--shape-square t-upload__card-image"
              fallback=""
              referrerpolicy="strict-origin-when-cross-origin"
            >
              <!---->
              <!---->
              <!---->
              <img
                alt=""
                class="t-image t-image--fit-contain t-image--position-center"
                referrerpolicy="strict-origin-when-cross-origin"
                src="https://img2.txt"
              />
              <div
                class="t-image__loading"
              >
                <div
                  class="t-space t-space-align-center t-space-vertical"
                  style="gap: 8px;"
                >
                  
                  
                  <div
                    class="t-space-item"
                  >
                    <svg
                      class="t-icon t-icon-image"
                      fill="none"
                      height="1em"
                      style="font-size: 24px;"
                      viewBox="0 0 24 24"
                      width="1em"
                    >
                      <path
                        d="M2 2H22V22H2V2ZM4 20H17.5858L9 11.4142L4 16.4142V20ZM20 19.5858V4H4V13.5858L9 8.58579L20 19.5858ZM15.5469 7C14.9946 7 14.5469 7.44772 14.5469 8C14.5469 8.55228 14.9946 9 15.5469 9C16.0992 9 16.5469 8.55228 16.5469 8C16.5469 7.44772 16.0992 7 15.5469 7ZM12.5469 8C12.5469 6.34315 13.89 5 15.5469 5C17.2037 5 18.5469 6.34315 18.5469 8C18.5469 9.65685 17.2037 11 15.5469 11C13.89 11 12.5469 9.65685 12.5469 8Z"
                        fill="currentColor"
                      />
                    </svg>
                  </div>
                  <!---->
                  
                  
                </div>
              </div>
              <!---->
              <!---->
            </div>
            <div
              class="t-upload__card-mask"
            >
              <span
                class="t-upload__card-mask-item"
              >
                <svg
                  class="t-icon t-icon-browse"
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <g
                    clipPath="url(#clip0_8726_7319)"
                  >
                    <path
                      d="M2.09675 12C3.53842 16.0792 7.42915 19 11.9996 19C16.57 19 20.4607 16.0792 21.9024 12C20.4607 7.92079 16.57 5 11.9996 5C7.42915 5 3.53842 7.92079 2.09675 12ZM0.0892162 11.696C1.69842 6.65364 6.42102 3 11.9996 3C17.5781 3 22.3007 6.65364 23.9099 11.696L24.007 12L23.9099 12.304C22.3007 17.3464 17.5781 21 11.9996 21C6.42102 21 1.69842 17.3464 0.0892162 12.304L-0.0078125 12L0.0892162 11.696ZM11.9999 9C10.343 9 8.99989 10.3431 8.99989 12C8.99989 13.6569 10.343 15 11.9999 15C13.6567 15 14.9999 13.6569 14.9999 12C14.9999 10.3431 13.6567 9 11.9999 9ZM6.99989 12C6.99989 9.23858 9.23846 7 11.9999 7C14.7613 7 16.9999 9.23858 16.9999 12C16.9999 14.7614 14.7613 17 11.9999 17C9.23846 17 6.99989 14.7614 6.99989 12Z"
                      fill="currentColor"
                    />
                  </g>
                </svg>
                <span
                  class="t-upload__card-mask-item-divider"
                />
              </span>
              <span
                class="t-upload__card-mask-item t-upload__delete"
              >
                <svg
                  class="t-icon t-icon-delete"
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <path
                    d="M7.5 1H16.5V4H22V6H19.971L19.471 23H4.52898L4.02898 6H2V4H7.5V1ZM9.5 4H14.5V3H9.5V4ZM6.02984 6L6.47102 21H17.529L17.9702 6H6.02984ZM13 8V19H11V8H13Z"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </div>
          </div>
          <p
            class="t-upload__card-name t-upload__flow-status"
          >
            <svg
              class="t-icon t-icon-time-filled"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M12 23C5.92487 23 1 18.0751 1 12C1 5.92487 5.92487 1 12 1C18.0751 1 23 5.92487 23 12C23 18.0751 18.0751 23 12 23ZM12.9999 5.49999H10.9999L10.9998 12.4142L14.9999 16.4142L16.4141 15L12.9999 11.5858V5.49999Z"
                fill="currentColor"
              />
            </svg>
            img2.txt
          </p>
        </li>
        <li
          class="t-upload__card-item"
        >
          <div
            class="t-upload__card-content t-is-bordered"
          >
            <div
              class="t-upload__card-status-wrap t-upload__image-flow-fail"
            >
              <svg
                class="t-icon t-icon-error-circle-filled"
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
              >
                <path
                  d="M12 1C18.0751 1 23 5.92487 23 12C23 18.0751 18.0751 23 12 23C5.92487 23 1 18.0751 1 12C1 5.92487 5.92487 1 12 1ZM11.0001 14H13.0001V6.49998H11.0001V14ZM13.004 15.5H11.0001V17.5039H13.004V15.5Z"
                  fill="currentColor"
                />
              </svg>
              <p>
                上传失败
                
              </p>
            </div>
            <!---->
            <div
              class="t-upload__card-mask"
            >
              <!---->
              <span
                class="t-upload__card-mask-item t-upload__delete"
              >
                <svg
                  class="t-icon t-icon-delete"
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <path
                    d="M7.5 1H16.5V4H22V6H19.971L19.471 23H4.52898L4.02898 6H2V4H7.5V1ZM9.5 4H14.5V3H9.5V4ZM6.02984 6L6.47102 21H17.529L17.9702 6H6.02984ZM13 8V19H11V8H13Z"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </div>
          </div>
          <p
            class="t-upload__card-name t-upload__flow-status"
          >
            <!---->
            img3.txt
          </p>
        </li>
        <li
          class="t-upload__card-item"
        >
          <div
            class="t-upload__card-content t-is-bordered"
          >
            <div
              class="t-upload__card-status-wrap t-upload__image-flow-progress"
            >
              <div
                class="t-loading--center t-size-m t-loading"
              >
                <svg
                  class="t-loading__gradient t-icon-loading"
                  height="1em"
                  size="medium"
                  version="1.1"
                  viewBox="0 0 12 12"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <foreignobject
                    height="12"
                    width="12"
                    x="0"
                    y="0"
                  >
                    <div
                      class="t-loading__gradient-conic"
                    />
                  </foreignobject>
                </svg>
                <!---->
              </div>
              <p>
                上传中
                 90%
              </p>
            </div>
            <!---->
            <div
              class="t-upload__card-mask"
            >
              <!---->
              <span
                class="t-upload__card-mask-item t-upload__delete"
              >
                <svg
                  class="t-icon t-icon-delete"
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <path
                    d="M7.5 1H16.5V4H22V6H19.971L19.471 23H4.52898L4.02898 6H2V4H7.5V1ZM9.5 4H14.5V3H9.5V4ZM6.02984 6L6.47102 21H17.529L17.9702 6H6.02984ZM13 8V19H11V8H13Z"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </div>
          </div>
          <p
            class="t-upload__card-name t-upload__flow-status"
          >
            <!---->
            img4.txt
          </p>
        </li>
        
      </ul>
    </div>
    <!---->
    <!---->
    
    <!---->
    <!--teleport start-->
    <transition-stub
      appear="false"
      css="true"
      persisted="false"
    >
      <!---->
    </transition-stub>
    <!--teleport end-->
    
  </div>
  <!---->
  <!---->
  
</div>
`;
